added ConvertToList<string> method to all InfoClasses

--- a/ShelterEvidency/Views/StayEndView.xaml
+++ b/ShelterEvidency/Views/StayEndView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ShelterEvidency.Views" xmlns:helpers="clr-namespace:ShelterEvidency.Helpers" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:local="clr-namespace:ShelterEvidency.Views" xmlns:helpers="clr-namespace:ShelterEvidency.Helpers" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              Background="{DynamicResource MaterialDesignPaper}"
             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -18,8 +18,9 @@
 
 
     </UserControl.Resources>
+    <Grid>
 
-    <Grid Margin="5" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
+        <Grid Margin="5" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -61,19 +62,50 @@
                         <ColumnDefinition/>
                         <ColumnDefinition Width="90"/>
                         <ColumnDefinition Width="90"/>
+                        <ColumnDefinition Width="90"/>
+                        <ColumnDefinition Width="40"/>
                     </Grid.ColumnDefinitions>
 
                     <DatePicker Margin="5" materialDesign:HintAssist.Hint="Od data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=EscapeSince, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
                     <DatePicker Grid.Column="1" Margin="5" materialDesign:HintAssist.Hint="Do data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=EscapeTo, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
 
-                    <Button x:Name="DeleteEscape" IsEnabled="{Binding EscapeIsSelected}" Grid.Column="3"  Style="{StaticResource MaterialDesignIconForegroundButton}">
+                    <Button x:Name="DeleteEscape" IsEnabled="{Binding EscapeIsSelected}" Grid.Column="4"  Style="{StaticResource MaterialDesignIconForegroundButton}">
                         <materialDesign:PackIcon
                 Kind="DeleteForever"
                 Height="24"
                 Width="24" />
                     </Button>
 
-                    <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="2"
+                        <materialDesign:PopupBox Grid.Row="1" Grid.Column="5" HorizontalAlignment="Right" Width="50" Height="50"
+                  Style="{StaticResource MaterialDesignPopupBox}"
+                  PlacementMode="BottomAndAlignRightEdges">
+                            <StackPanel>
+                                <Button Style="{StaticResource MaterialDesignFlatAccentButton}" VerticalAlignment="Center">
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="Click">
+                                            <cal:ActionMessage MethodName="ExportEscapesPDF" />
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                        <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">EXPORT PDF</TextBlock>
+                                        <materialDesign:PackIcon Kind="FileAcrobat" Margin="10,0,0,0"  Width="20" Height="20"/>
+                                    </StackPanel>
+                                </Button>
+                                <Button Style="{StaticResource MaterialDesignFlatAccentButton}" VerticalAlignment="Center">
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="Click">
+                                            <cal:ActionMessage MethodName="ExportEscapesExcell" />
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                        <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">EXPORT XLSX</TextBlock>
+                                        <materialDesign:PackIcon Kind="FileExcel" Margin="10,0,0,0"  Width="20" Height="20"/>
+                                    </StackPanel>
+                                </Button>
+                            </StackPanel>
+                        </materialDesign:PopupBox>
+
+                        <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="2"
                 x:Name="FilterEscapes" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,2,2" >
                         <materialDesign:PackIcon
                 Kind="Update"
@@ -81,7 +113,15 @@
                 Width="30" />
                     </Button>
 
-                </Grid>
+                        <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="3"
+                x:Name="CreateEscape" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,2,2" >
+                            <materialDesign:PackIcon
+                Kind="Plus"
+                Height="30"
+                Width="30" />
+                        </Button>
+
+                    </Grid>
 
 
 
@@ -109,7 +149,6 @@
                     <RowDefinition Height="80"/>
                     <RowDefinition Height="80"/>
                     <RowDefinition/>
-                    <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
 
                 <Grid>
@@ -134,12 +173,14 @@
                         <ColumnDefinition/>
                         <ColumnDefinition Width="90"/>
                         <ColumnDefinition Width="90"/>
+                        <ColumnDefinition Width="90"/>
+                        <ColumnDefinition Width="40"/>
                     </Grid.ColumnDefinitions>
 
                     <DatePicker Margin="5" materialDesign:HintAssist.Hint="Od data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=DeathSince, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
                     <DatePicker Grid.Column="1" Margin="5" materialDesign:HintAssist.Hint="Do data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=DeathTo, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
 
-                    <Button x:Name="DeleteDeath" IsEnabled="{Binding DeathIsSelected}" Grid.Column="3"  Style="{StaticResource MaterialDesignIconForegroundButton}">
+                    <Button x:Name="DeleteDeath" IsEnabled="{Binding DeathIsSelected}" Grid.Column="4"  Style="{StaticResource MaterialDesignIconForegroundButton}">
                         <materialDesign:PackIcon
                 Kind="DeleteForever"
                 Height="24"
@@ -153,8 +194,44 @@
                 Height="30"
                 Width="30" />
                     </Button>
+                        <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="3"
+                x:Name="CreateDeath" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,2,2" >
+                            <materialDesign:PackIcon
+                Kind="Plus"
+                Height="30"
+                Width="30" />
+                        </Button>
 
-                </Grid>
+                        <materialDesign:PopupBox Grid.Row="1" Grid.Column="5" HorizontalAlignment="Right" Width="50" Height="50"
+                  Style="{StaticResource MaterialDesignPopupBox}"
+                  PlacementMode="BottomAndAlignRightEdges">
+                            <StackPanel>
+                                <Button Style="{StaticResource MaterialDesignFlatAccentButton}" VerticalAlignment="Center">
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="Click">
+                                            <cal:ActionMessage MethodName="ExportDeathsPDF" />
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                        <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">EXPORT PDF</TextBlock>
+                                        <materialDesign:PackIcon Kind="FileAcrobat" Margin="10,0,0,0"  Width="20" Height="20"/>
+                                    </StackPanel>
+                                </Button>
+                                <Button Style="{StaticResource MaterialDesignFlatAccentButton}" VerticalAlignment="Center">
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="Click">
+                                            <cal:ActionMessage MethodName="ExportDeathsExcell" />
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                        <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">EXPORT XLSX</TextBlock>
+                                        <materialDesign:PackIcon Kind="FileExcel" Margin="10,0,0,0"  Width="20" Height="20"/>
+                                    </StackPanel>
+                                </Button>
+                            </StackPanel>
+                        </materialDesign:PopupBox>
+
+                    </Grid>
 
 
 
@@ -209,17 +286,22 @@
 
                 </DataGrid>
 
-                <Button Style="{StaticResource MaterialDesignFlatAccentButton}" Grid.Row="3" Margin="5" VerticalAlignment="Center" HorizontalAlignment="Right" x:Name="Export">
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                        <TextBlock VerticalAlignment="Center" Margin="10,0,0,0">EXPORT</TextBlock>
-                        <materialDesign:PackIcon Kind="FileExportOutline" Margin="10,0,0,0"  Width="20" Height="20"/>
-                    </StackPanel>
-                </Button>
-
             </Grid>
 
 
         </materialDesign:Card>
+
+        <ProgressBar  
+              Visibility="{Binding IsWorking, Converter={StaticResource VisibleIfTrueConverter}, Mode=OneWay}"
+              Grid.RowSpan="2" Grid.ColumnSpan="3"
+              Style="{StaticResource MaterialDesignCircularProgressBar}"
+              Value="0"
+              Height="50"
+              Width="50"
+              IsIndeterminate="True" />
+
+    </Grid>
+        <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Height="400" Width="450" x:Name="ActiveItem"/>
 
     </Grid>
 </UserControl>
